--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ body {
     width: 100%;
     height: 50px;
     background: var(--nav-color);
+    border-bottom: 1px solid white;
 }
 .top-nav img{
     position: absolute;
@@ -49,10 +50,12 @@ body {
     display: inline-block;
     margin: 10px;
     font-family: 'Montserrat', sans-serif;
-    bottom: 7px;
-    font-size: var(--h2);
-    padding: 10px;
+    bottom: 1px;
+    font-size: var(--h4);
+    padding: 5px;
     color: white;
+    border: 1px solid;
+    border-radius: 5px;
 }
 .top-nav ul li:hover{
     background: var(--hover)
@@ -73,6 +76,7 @@ body {
     position: fixed;
     top: 50px;
     color: white;
+    border: 1px solid;
 }
 
 .section {
