--- a/css/index.css
+++ b/css/index.css
@@ -163,4 +163,17 @@ body a:hover{
 .form-field input{
     background: #fff;
     color: #000;
+    font-size: var(--h1-size)
+}
+/* check height property for content fitting */
+.section-read-products{
+    position: relative;
+    background: white;
+    width: 1215px;
+    top: 50px;
+    left: 150px;
+    height: 450px;
+    /* height: auto; */
+    text-align: center;
+    color: white;
 }
